@@ -7,6 +7,9 @@
 much. This needs to be fixed.
 * fix unpacker for ubifs. Needs testing with more real data.
 * remove temporary dirs in the bzip2 unpacker
+* add stubs for working with priorities, as announced on the mailinglist
+* make "config" global, eventually we will replace this with something else
+that should significantly clean up the code
 
 2011-01-29
 * add -d to cpio, so it actually creates directories
